[FEATURE] get iiif info fra iiif server
